fix(badge): text-overflow

--- a/components/badge/src/vwc-badge.scss
+++ b/components/badge/src/vwc-badge.scss
@@ -56,6 +56,7 @@ $vvd-badge--block-size: #{$namespace}--block-size;
 	border-radius: var(#{$namespace-shape});
 	color: var(#{layout.$vvd-layout-color-text});
 	line-height: var(#{$vvd-badge--block-size});
+	max-inline-size: 100%;
 
 	:host([dense]) & {
 		padding: 0 8px;
@@ -63,6 +64,14 @@ $vvd-badge--block-size: #{$namespace}--block-size;
 
 	:host([enlarged]) & {
 		padding: 0 12px;
+	}
+
+	.text {
+		display: block;
+		overflow: hidden;
+		max-inline-size: 100%;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 }
 
